# Lattice

./: .gitignore  CONTRIBUTING.md  README.md  app.py  component.py  component_selector.py  constants.py  exposure_optimizer.py  gen_new_print_file.py  gen_print_file.py  graph_coloring.py  group.py  image_gen.py  image_ops.py  main.py  menu_arrange.py  object.py  popup.py  pyproject.toml  rectangle.py  rectangle_app.py  setup.py  test_exposure_optimizer.py  tile_dialog.py  ui_v9.py
app/: __init__.py  app.py  component.py  component_selector.py  exposure_optimizer.py  gen_print_file.py  graph_coloring.py  logging_setup.py  print_file_utils.py  test_partitioning.py
app/menus/: arrange_menu.py  component_menu.py  file_menu.py  group_menu.py  menu.py  view_menu.py
menus/: __init__.py  arrange_menu.py  component_menu.py  file_menu.py  group_menu.py  menu.py  object_menu.py  view_menu.py
src/: app.py  component_selector.py  constants.py  exposure_optimizer.py  gen_print_file.py  image_ops.py
src/menus/: arrange_menu.py  component_menu.py  file_menu.py  group_menu.py  menu.py  view_menu.py
tests/: __init__.py  test_app.py  test_arrange_menu.py  test_component_menu.py  test_component_selector.py  test_exposure_optimizer.py  test_file_menu.py  test_gen_print_file.py  test_graph_coloring.py  test_group_menu.py  test_image_ops.py  test_popup.py  test_tile_dialog.py
